<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Where Is My Bus?</string>
    <string name="credits">Credits</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_cancella">Cancella</string>
    <string name="linkedinVL"><u>it.linkedin.com/in/valentinalipari</u></string>
    <string name="linkedinGM"><u>it.linkedin.com/in/giovannimeo</u></string>
    <string name="linkCiriIct"><u>www.ciri-ict.unibo.it</u></string>
    <string name="aggprof">Aggiungi profilo</string>
    <string name="profmem">Profili memorizzati</string>
    <string name="cancprof">Cancella profilo</string>
    <string name="vocalcom">Comandi vocali</string>
    <string name="nomprof">Nome profilo:</string>
    <string name="indprof">Indirizzo di partenza:</string>
    <string name="tmaxprof">si trova a non più di</string>
    <string name="tmaxprof2"> minuti di cammino dall\'indirizzo di partenza.</string>
    <string name="fermprof">La fermata</string>
    <string name="linprof">Linea:</string>
    <string name="inizia">Quando passa il prossimo pullman?</string>
    <string name="cancella">Cancella profilo</string>
    <string name="prosspull">Prossimo pullman</string>
    <string name="infotempomax">»» Info Tempo Massimo</string>
    <string name="getprofdata">Seleziona corsa</string>
    <string name="getrtdata">Prossima corsa</string>
    <string name="vlipari">Valentina Lipari</string>
    <string name="mailvl">v.lipari@studenti.unina.it</string>
    <string name="gmeo">Giovanni Meo</string>
    <string name="mailgm">g.meo@live.com</string>
    <string name="mvriz">Marina Vriz</string>
    <string name="asphi">Fondazione ASPHI</string>
    <string name="linkAsphi">www.asphi.it</string>
    <string name="ciriict">CIRI ICT - Centro per la Ricerca Industriale sul ICT, Università di Bologna</string>
    <string name="infociriict">Il CIRI ICT è il Centro di ricerca industriale dell\'Università di Bologna per le tecnologie dell\'informazione e della comunicazione.</string>
    <string name="infocredits">Applicazione realizzata da:</string>
    <string name="infocredits2">In collaborazione con:</string>
    <string name="aggiorna">Aggiorna</string>
    <string name="salgo">Salgo sul bus</string>

    <string-array name="seltype">
        <item>via</item>
        <item>viale</item>
        <item>piazza</item>
        <item>largo</item>
        <item>rotonda</item>
        <item>piazzetta</item>
        <item>vicolo</item>
    </string-array>
    <string-array name="seltown">
        <item>Bologna</item>
    </string-array>
    <string-array name="streets">
        <item>Carlo Pepoli</item>
        <item>Saragozza</item>
        <item>Filopanti</item>
        <item>Goito</item>
        <item>Nettuno</item>
        <item>Grande</item>
        <item>Maggiore</item>
        <item>Caduti Del Lavoro</item>
        <item>dell\'Indipendenza</item>
    </string-array>

    <string name="title_activity_aaasd">Aaasd</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_in_viaggio">In viaggio</string>

</resources>
