<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff" >

    <fullwipe.ciriitc.whereismybus.utilities.CustomTextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infocredits"
        android:textSize="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="2dp"
        android:background="#ffffff"
        android:padding="4dp" >

        <fullwipe.ciriitc.whereismybus.utilities.CustomTextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vlipari"
        	android:textSize="18dp"
        	android:textColor="#000000"/>

        <fullwipe.ciriitc.whereismybus.utilities.CustomTextView
            android:id="@+id/tvlink1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linkedinVL"
			android:clickable="true"
			android:autoLink="all"
			android:layout_marginLeft="6dp"  />

        <fullwipe.ciriitc.whereismybus.utilities.CustomTextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mailvl"
			android:layout_marginLeft="6dp"
			android:textIsSelectable="true"
            android:textColor="#304ffe"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="#ffffff"
        android:padding="4dp" >

        <fullwipe.ciriitc.whereismybus.utilities.CustomTextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gmeo"
        	android:textSize="18dp"
        	android:textColor="#000000" />

        <fullwipe.ciriitc.whereismybus.utilities.CustomTextView
            android:id="@+id/tvlink2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linkedinGM"
			android:clickable="true"
			android:autoLink="all"
			android:layout_marginLeft="6dp"  />

        <fullwipe.ciriitc.whereismybus.utilities.CustomTextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mailgm"
			android:layout_marginLeft="6dp"
			android:textIsSelectable="true"
            android:textColor="#304ffe"  />

    </LinearLayout>

    <fullwipe.ciriitc.whereismybus.utilities.CustomTextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infocredits2"
        android:textSize="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="2dp" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="2dp" 
        android:background="#ffffff"
        android:padding="4dp" >

        <fullwipe.ciriitc.whereismybus.utilities.CustomTextView
            android:id="@+id/textView99"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mvriz"
        	android:textSize="18dp"
        	android:textColor="#000000" />

        <fullwipe.ciriitc.whereismybus.utilities.CustomTextView
            android:id="@+id/textView100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_marginLeft="6dp"
            android:text="@string/asphi" />

    	<fullwipe.ciriitc.whereismybus.utilities.CustomTextView
            android:id="@+id/tvlink33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linkAsphi"
			android:clickable="true"
			android:autoLink="all"
			android:layout_marginLeft="6dp"  />
    
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="2dp" 
        android:background="#ffffff"
        android:padding="4dp" >

        <fullwipe.ciriitc.whereismybus.utilities.CustomTextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ciriict"
        	android:textSize="18dp"
        	android:textColor="#000000" />

        <fullwipe.ciriitc.whereismybus.utilities.CustomTextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_marginLeft="6dp"
            android:text="@string/infociriict" />

    	<fullwipe.ciriitc.whereismybus.utilities.CustomTextView
            android:id="@+id/tvlink3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linkCiriIct"
			android:clickable="true"
			android:autoLink="all"
			android:layout_marginLeft="6dp"  />
    
    </LinearLayout>

</LinearLayout>
    

</ScrollView>
