<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp"
        android:orientation="vertical" >

        <fullwipe.ciriitc.whereismybus.utilities.CustomTextView
            android:id="@+id/nometextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomprof"/>

        <fullwipe.ciriitc.whereismybus.utilities.CustomTextView
            android:id="@+id/nomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_marginLeft="3dp" />

        <fullwipe.ciriitc.whereismybus.utilities.CustomTextView
            android:id="@+id/indirizzotextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indprof" />

        <fullwipe.ciriitc.whereismybus.utilities.CustomTextView
            android:id="@+id/indirizzoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="17dp"
            android:layout_marginLeft="3dp" />

        <fullwipe.ciriitc.whereismybus.utilities.CustomTextView
            android:id="@+id/fermataText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <fullwipe.ciriitc.whereismybus.utilities.CustomTextView
                android:id="@+id/lineatextView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/linprof" />

            <fullwipe.ciriitc.whereismybus.utilities.CustomTextView
                android:id="@+id/lineaText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            	android:textColor="#000000"
	            android:textSize="17dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_inizia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inizia"
            android:contentDescription="@string/prosspull" />

    </LinearLayout>

</LinearLayout>