<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp"
        android:orientation="vertical" >

        <fullwipe.ciriitc.whereismybus.utilities.CustomTextView
            android:id="@+id/cnometextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomprof"/>

        <fullwipe.ciriitc.whereismybus.utilities.CustomTextView
            android:id="@+id/cnomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_marginLeft="3dp" />

        <fullwipe.ciriitc.whereismybus.utilities.CustomTextView
            android:id="@+id/cindirizzotextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indprof" />

        <fullwipe.ciriitc.whereismybus.utilities.CustomTextView
            android:id="@+id/cindirizzoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="17dp"
            android:layout_marginLeft="3dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <fullwipe.ciriitc.whereismybus.utilities.CustomTextView
                android:id="@+id/clineatextView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/linprof" />

            <fullwipe.ciriitc.whereismybus.utilities.CustomTextView
                android:id="@+id/clineaText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            	android:textColor="#000000"
	            android:textSize="17dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_cancella"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancella" />

    </LinearLayout>


</LinearLayout>