<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- The main content -->

    <include
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/main" />
    <!-- "Loaded" frame layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" >

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5" >

                <TextView
                    android:id="@+id/text_aggiungiprofilo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aggprof"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_marginBottom="8dp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5" >

                <TextView
                    android:id="@+id/text_profilimemorizzati"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profmem"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_marginBottom="8dp" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" >

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5" >

                <TextView
                    android:id="@+id/text_cancellaprofilo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancprof"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_marginBottom="8dp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5" >

                <TextView
                    android:id="@+id/text_comandivocali"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vocalcom"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_marginBottom="8dp" />
            </FrameLayout>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>